# vn-rust-hackathon

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/thirtytwo/vn_rust_hackathon/: MainActivity.kt
cube-exchange/: Cargo.toml  README.md  response.json
cube-exchange/src/: main.rs
cube-exchange/src/config/: parameter.rs
cube-exchange/src/entity/: coinDto.rs  klines.rs  market.rs  mod.rs  user.rs
cube-exchange/src/error/: mod.rs
cube-exchange/src/routes/: klines.rs  market.rs  mod.rs  user.rs
cube-exchange/src/service/: auth.rs  coins.rs  klines.rs  market_service.rs  mod.rs  user_service.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/Business/: business_dashboard.dart  business_history.dart
lib/DTO/: dto_candle.dart  dto_dashboard.dart  dto_history.dart  dto_wallet.dart
lib/Data/: data_candle.dart  data_dashboard.dart  data_history.dart  data_market.dart  data_wallet.dart
lib/GUI/: gui_dashboard.dart  gui_history.dart  gui_metamask_login_screen.dart  gui_navigation_bar.dart  gui_wallet.dart
lib/GUI/GUIComponents/: gui_app_bar.dart  gui_history_item.dart  gui_navigation_bar.dart  gui_notification.dart
lib/GUI/GUIComponents/GUIDashboard/: gui_chart.dart  gui_dashboard_notifier.dart  gui_histogram.dart  gui_record.dart
lib/GUI/GUIDashBoard/: gui_trade.dart
lib/GUI/GUIHistory/: gui_history.dart  gui_history_notifier.dart
lib/Services/: metamask_service.dart
test/: widget_test.dart
