[package]
name = "cube_exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
dotenv = "0.15.0"
serde =  { version = "1.0.152", features = ["derive"] }
jsonwebtoken = "8.3.0"
thiserror = "1.0.40"
chrono = {version = "0.4.24", features = ["serde"]}
serde_json = "1.0.95"
mockall = "0.11.4"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "migrate", "chrono", "time"] }
validator = { version = "0.16.0", features = ["derive"] }
async-trait = "0.1.68"
sqlx-cli = "0.6.3"
tracing-subscriber = "0.3.17"
axum = { version = "0.6.3" }
reqwest = { version = "0.12.4", features = ["json"] }
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
hex = "0.4.3"
engine = "0.0.0"
